update default button font-colour to correct contrast issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,7 @@ section.languages {
   height: 40px;
   border-radius: 4px;
   background-color: #fcba29;
+  color: #1c3144;
   font-family: "Raleway", sans-serif;
   font-weight: 600;
   border: 1px solid #c3d898;
